--- a/public/icon/style.css
+++ b/public/icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ear3dc');
-  src:  url('fonts/icomoon.eot?ear3dc#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ear3dc') format('truetype'),
-    url('fonts/icomoon.woff?ear3dc') format('woff'),
-    url('fonts/icomoon.svg?ear3dc#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?g4dv9f');
+  src:  url('fonts/icomoon.eot?g4dv9f#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?g4dv9f') format('truetype'),
+    url('fonts/icomoon.woff?g4dv9f') format('woff'),
+    url('fonts/icomoon.svg?g4dv9f#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,11 +25,32 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-down1:before {
+.icon-update_version:before {
+  content: "\e904";
+  color: #ce0005;
+}
+.icon-download_after:before {
   content: "\e903";
+  color: #fff;
+}
+.icon-next:before {
+  content: "\e906";
+  color: #fff;
+}
+.icon-prev:before {
+  content: "\e907";
+  color: #fff;
+}
+.icon-search:before {
+  content: "\e905";
+  color: #fafafa;
 }
 .icon-icon_download:before {
   content: "\e900";
+  color: #ce0005;
+}
+.icon-support:before {
+  content: "\e908";
   color: #ce0005;
 }
 .icon-follow_red:before {
