--- a/public/icon/style.css
+++ b/public/icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ifs780');
-  src:  url('fonts/icomoon.eot?ifs780#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ifs780') format('truetype'),
-    url('fonts/icomoon.woff?ifs780') format('woff'),
-    url('fonts/icomoon.svg?ifs780#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?imiq32');
+  src:  url('fonts/icomoon.eot?imiq32#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?imiq32') format('truetype'),
+    url('fonts/icomoon.woff?imiq32') format('woff'),
+    url('fonts/icomoon.svg?imiq32#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -38,6 +38,13 @@
   content: "\e919";
   margin-left: -1em;
   color: rgb(255, 255, 255);
+}
+.icon-product:before {
+  content: "\e914";
+  color: #fff;
+}
+.icon-search-back:before {
+  content: "\e916";
 }
 .icon-top-up1:before {
   content: "\e915";
