--- a/public/icon/style.css
+++ b/public/icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?4wzgon');
-  src:  url('fonts/icomoon.eot?4wzgon#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?4wzgon') format('truetype'),
-    url('fonts/icomoon.woff?4wzgon') format('woff'),
-    url('fonts/icomoon.svg?4wzgon#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?46hb5r');
+  src:  url('fonts/icomoon.eot?46hb5r#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?46hb5r') format('truetype'),
+    url('fonts/icomoon.woff?46hb5r') format('woff'),
+    url('fonts/icomoon.svg?46hb5r#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-up-green:before {
+  content: "\e91b";
+  color: #0ce63e;
+}
+.icon-down-red:before {
+  content: "\e91c";
+  color: #d50000;
+}
 .icon-upload-kyc .path1:before {
   content: "\e917";
   color: rgb(206, 0, 5);
