--- a/public/icon/style.css
+++ b/public/icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?46hb5r');
-  src:  url('fonts/icomoon.eot?46hb5r#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?46hb5r') format('truetype'),
-    url('fonts/icomoon.woff?46hb5r') format('woff'),
-    url('fonts/icomoon.svg?46hb5r#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?lqkrum');
+  src:  url('fonts/icomoon.eot?lqkrum#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?lqkrum') format('truetype'),
+    url('fonts/icomoon.woff?lqkrum') format('woff'),
+    url('fonts/icomoon.svg?lqkrum#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-money:before {
+  content: "\e91d";
+  color: #fff;
+}
 .icon-up-green:before {
   content: "\e91b";
   color: #0ce63e;
