--- a/public/icon/style.css
+++ b/public/icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?lqkrum');
-  src:  url('fonts/icomoon.eot?lqkrum#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?lqkrum') format('truetype'),
-    url('fonts/icomoon.woff?lqkrum') format('woff'),
-    url('fonts/icomoon.svg?lqkrum#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?59d26k');
+  src:  url('fonts/icomoon.eot?59d26k#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?59d26k') format('truetype'),
+    url('fonts/icomoon.woff?59d26k') format('woff'),
+    url('fonts/icomoon.svg?59d26k#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-correct-green .path1:before {
+  content: "\e91e";
+  color: rgb(35, 193, 151);
+}
+.icon-correct-green .path2:before {
+  content: "\e91f";
+  margin-left: -1em;
+  color: rgb(255, 255, 255);
+}
 .icon-money:before {
   content: "\e91d";
   color: #fff;
