--- a/public/icon/style.css
+++ b/public/icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ltlrk5');
-  src:  url('fonts/icomoon.eot?ltlrk5#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ltlrk5') format('truetype'),
-    url('fonts/icomoon.woff?ltlrk5') format('woff'),
-    url('fonts/icomoon.svg?ltlrk5#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?ico1er');
+  src:  url('fonts/icomoon.eot?ico1er#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?ico1er') format('truetype'),
+    url('fonts/icomoon.woff?ico1er') format('woff'),
+    url('fonts/icomoon.svg?ico1er#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -36,6 +36,10 @@
 }
 .icon-money:before {
   content: "\e91d";
+  color: #fff;
+}
+.icon-dropdown-wh:before {
+  content: "\e921";
   color: #fff;
 }
 .icon-dropdown:before {
