--- a/public/home/font/specimen_files/specimen_stylesheet.css
+++ b/public/home/font/specimen_files/specimen_stylesheet.css
@@ -218,11 +218,11 @@ code {
 
 .bottom,.last 	{margin-bottom:0 !important; padding-bottom:0 !important;}
 
-.box  { 
+/* .box  { 
   padding: 18px; 
   margin-bottom: 18px; 
   background: #eee; 
-}
+} */
 
 .reverse,.reversed { background:  #000 !important;color:  #fff !important; border: none !important;}
 
